<resources>
    <string name="app_name">FitnessMusicCounter</string>
    <string name="select_radio_station">Select Radio Station</string>
    <string name="btn_radio_station">Select</string>
    <string name="sets_count">Sets Count</string>
    <string name="btn_start">START</string>
    <string name="btn_statistics">Show Statistics</string>

    <string name="preferences_reps">preferences_reps</string>

    <string name="title_statistics">STATISTICS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>