<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.setup.SetupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentSetup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvRadioStation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_radio_station"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnRadioStation"
            app:layout_constraintStart_toStartOf="@+id/guideV10"
            app:layout_constraintTop_toTopOf="@+id/btnRadioStation" />

        <Button
            android:id="@+id/btnRadioStation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/btn_radio_station"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideV90"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideV10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="111dp"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideV90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="238dp"
            app:layout_constraintGuide_percent="0.9" />

        <EditText
            android:id="@+id/editRepsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="Sets"
            android:inputType="numberDecimal"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/guideV90"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:text="@string/sets_count"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/guideV10"
            app:layout_constraintTop_toBottomOf="@+id/tvRadioStation" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_marginTop="150dp"
            android:text="@string/btn_start"
            app:backgroundTint="#F44336"
            app:layout_constraintEnd_toEndOf="@+id/btnShowStatistic"
            app:layout_constraintStart_toStartOf="@+id/btnShowStatistic"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/btnShowStatistic"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:layout_marginTop="80dp"
            android:inputType="textMultiLine"
            android:text="@string/btn_statistics"
            app:backgroundTint="#8DAE66"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnStart" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>